Fix long words overflow

--- a/assets/source/styles/theme.styl
+++ b/assets/source/styles/theme.styl
@@ -41,6 +41,9 @@ h1, h2, h3, h4, h5
     > * + *
       margin-top $indent
 
+    > .content
+      overflow-wrap break-word
+
     > .more
       margin-top ($indent / 2)
 
